// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spacing variations 1`] = `
Object {
  "buffer": "/***/",
  "comment": "/***/",
  "errors": Array [],
  "lines": Array [],
}
`;

exports[`Spacing variations 2`] = `
Object {
  "buffer": " /***/ ",
  "comment": "/***/",
  "errors": Array [],
  "lines": Array [],
}
`;

exports[`Spacing variations 3`] = `
Object {
  "buffer": " /** */ ",
  "comment": "/** */",
  "errors": Array [],
  "lines": Array [],
}
`;

exports[`Spacing variations 4`] = `
Object {
  "buffer": " /**[n][n]*/ ",
  "comment": "/**[n][n]*/",
  "errors": Array [],
  "lines": Array [],
}
`;

exports[`Spacing variations 5`] = `
Object {
  "buffer": " /**L1*/ ",
  "comment": "/**L1*/",
  "errors": Array [],
  "lines": Array [
    "L1",
  ],
}
`;

exports[`Spacing variations 6`] = `
Object {
  "buffer": " /** L1 */ ",
  "comment": "/** L1 */",
  "errors": Array [],
  "lines": Array [
    "L1",
  ],
}
`;

exports[`Spacing variations 7`] = `
Object {
  "buffer": " /**L1[n]*/ ",
  "comment": "/**L1[n]*/",
  "errors": Array [],
  "lines": Array [
    "L1",
  ],
}
`;

exports[`Spacing variations 8`] = `
Object {
  "buffer": " /**L1*[n]*/ ",
  "comment": "/**L1*[n]*/",
  "errors": Array [],
  "lines": Array [
    "L1*",
  ],
}
`;

exports[`Spacing variations 9`] = `
Object {
  "buffer": " /**[n]L1*/ ",
  "comment": "/**[n]L1*/",
  "errors": Array [],
  "lines": Array [
    "L1",
  ],
}
`;

exports[`Spacing variations 10`] = `
Object {
  "buffer": " /**[n] L1 */ ",
  "comment": "/**[n] L1 */",
  "errors": Array [],
  "lines": Array [
    "L1",
  ],
}
`;

exports[`Spacing variations 11`] = `
Object {
  "buffer": " /**[n]L1[n]*/ ",
  "comment": "/**[n]L1[n]*/",
  "errors": Array [],
  "lines": Array [
    "L1",
  ],
}
`;

exports[`Spacing variations 12`] = `
Object {
  "buffer": " /**[n]L1[n]L2*/ ",
  "comment": "/**[n]L1[n]L2*/",
  "errors": Array [],
  "lines": Array [
    "L1",
    "L2",
  ],
}
`;

exports[`Spacing variations 13`] = `
Object {
  "buffer": " /**[n]*L1[n]*/ ",
  "comment": "/**[n]*L1[n]*/",
  "errors": Array [],
  "lines": Array [
    "L1",
  ],
}
`;

exports[`Spacing variations 14`] = `
Object {
  "buffer": " /**[n] * L1[n]*/ ",
  "comment": "/**[n] * L1[n]*/",
  "errors": Array [],
  "lines": Array [
    "L1",
  ],
}
`;

exports[`Spacing variations 15`] = `
Object {
  "buffer": " /**[n] * L1[n] */ ",
  "comment": "/**[n] * L1[n] */",
  "errors": Array [],
  "lines": Array [
    "L1",
  ],
}
`;

exports[`Spacing variations 16`] = `
Object {
  "buffer": " /**L1[n] *L2[n]L3*/ ",
  "comment": "/**L1[n] *L2[n]L3*/",
  "errors": Array [],
  "lines": Array [
    "L1",
    "L2",
    "L3",
  ],
}
`;

exports[`Spacing variations 17`] = `
Object {
  "buffer": " /** L1[n] * L2[n] L3*/ ",
  "comment": "/** L1[n] * L2[n] L3*/",
  "errors": Array [],
  "lines": Array [
    "L1",
    "L2",
    "L3",
  ],
}
`;

exports[`Spacing variations 18`] = `
Object {
  "buffer": " /** L1 [n] * L2 [n] L3 */ ",
  "comment": "/** L1 [n] * L2 [n] L3 */",
  "errors": Array [],
  "lines": Array [
    "L1",
    "L2",
    "L3",
  ],
}
`;

exports[`Spacing variations 19`] = `
Object {
  "buffer": " /**  L1  [n] *  L2  [n]  L3  */ ",
  "comment": "/**  L1  [n] *  L2  [n]  L3  */",
  "errors": Array [],
  "lines": Array [
    " L1",
    " L2",
    "L3",
  ],
}
`;

exports[`Stars added 1`] = `
Object {
  "buffer": " /****/ ",
  "comment": "/****/",
  "errors": Array [],
  "lines": Array [
    "*",
  ],
}
`;

exports[`Stars added 2`] = `
Object {
  "buffer": " /**L1**/ ",
  "comment": "/**L1**/",
  "errors": Array [],
  "lines": Array [
    "L1*",
  ],
}
`;

exports[`Stars added 3`] = `
Object {
  "buffer": " /***L1*/ ",
  "comment": "/***L1*/",
  "errors": Array [],
  "lines": Array [
    "*L1",
  ],
}
`;

exports[`Stars added 4`] = `
Object {
  "buffer": "[n]/*****[n] **X**[n] *****/ ",
  "comment": "/*****[n] **X**[n] *****/",
  "errors": Array [],
  "lines": Array [
    "***",
    "*X**",
    "***",
  ],
}
`;
